syntax = "proto3";
// package log;
package message;
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// option go_package = "../log";
option go_package = "./message";

message MessageRequest {
    optional google.protobuf.Timestamp time = 1;
    optional string prefix = 2;
    optional string sub = 3;
    optional int32 level = 4;
    string msg = 5;
    optional google.protobuf.Struct meta = 6;
}

message MessageResponse {
    bool ok = 1;
}

service LogService {
    rpc Log(MessageRequest) returns (MessageResponse) {} 
    rpc LogStream(stream MessageRequest) returns (stream MessageResponse) {}
}